<resources>
    <string name="app_name">All Tasks</string>
    <string name="welcome">Welcome to Android classes app.</string>
    <string name="finish">Finish current activity.</string>

    <string name="second_class">Second Class</string>
    <string name="window_like_dialog">Start activity like dialog</string>
    <string name="send_text_hint">Text you want to send.</string>
    <string name="send_input_text">Send input text</string>
    <string name="send_multiple_texts">Send text on 3 different ways</string>

    <string name="third_class">Third Class</string>
    <string name="google_search">Start google search</string>
    <string name="add_number">Add number</string>
    <string name="make_call">Start call</string>
    <string name="show_map">Start maps</string>
    <string name="send_broadcast">Send broadcast</string>
    <string name="both_fragments">Start both fragments</string>
    <string name="alternating_fragments">Start fragments depending on orientation</string>
    <string name="mix_fragments">Start fragments dynamically (bonus)</string>
    <string name="fragment1">Hello from fragment 1</string>
    <string name="fragment2">Hello from fragment 2</string>
    <string name="start_fragment2">Start fragment 2</string>

    <string name="fourth_class">Fourth Class</string>
    <string name="start_linear_layout">Linear Layout</string>
    <string name="button">Button</string>
    <string name="start_relative_layout">Relative Layout</string>
    <string name="comments">Comments</string>
    <string name="cancel">Cancel</string>
    <string name="start_table_layout">Table Layout</string>
    <string name="start_frame_layout">Frame Layout</string>
    <string name="start_anchoring">Anchoring</string>
    <string name="hello_world">Hello World</string>
    <string name="picture">Picture</string>
    <string name="autosave">Autosave</string>
    <string name="option1">Option1</string>
    <string name="option2">Option2</string>
    <string name="edit_message">Edit Message</string>
    <string name="view_elements">View Elements</string>
    <string name="progress_bar">Start progress bar</string>
    <string name="list_view">Start list view</string>
    <string name="gallery">Start gallery</string>
    <string-array name="kolegiji">
        <item>Baze podataka</item>
        <item>Racunarski praktikum</item>
        <item>Mreze racunala</item>
        <item>SPA</item>
        <item>Programiranje</item>
    </string-array>

    <string name="fifth_class">Fifth Class</string>
    <string name="shared_preferences">Start shared preferences</string>
    <string name="file_saving">Start saving file</string>
    <string name="log_debug">Try log message for debug</string>
    <string name="options_context_menu">Try options and context menu</string>
    <string name="bonus_options_menu">Options menu for changing background color</string>
    <string name="any_text">Add any text</string>
    <string name="save">Save</string>
    <string name="load">Load</string>
    <string name="read_file">Read file from res/raw</string>
    <string name="send_logI">Send log I</string>
    <string name="send_logE">Send log E</string>
    <string name="send_logWTF">Send log WTF</string>
    <string name="click_and_hold">Click on button and hold</string>
    <string name="title_activity_fifth_bonus_options_menu">Settings</string>
    <string name="blue">Blue</string>
    <string name="red">Red</string>
    <string name="black">Black</string>
    <string name="white">White</string>
    <string name="change_background">Change background color</string>
    <string name="start_google">Start google search</string>

    <string name="sixth_class">Sixth Class</string>

    <string name="seventh_class">Seventh Class</string>
    <string name="custom_content_provider">Start custom CP</string>
    <string name="embedded_content_provider">Start embedded CP</string>
    <string name="get_books_from_bl">Get books that start on B or L</string>
    <string name="delete_books_isbn">Delete books with given ISBN</string>
    <string name="get_books_all">Get all books</string>
    <string name="ISBN">ISBN</string>
    <string name="book_title">Book title</string>
    <string name="add_book">Add book</string>

    <string name="eighth_class">Eighth Class</string>
    <string name="download_pic_txt">Downloading</string>
    <string name="send_sms_mail">Send SMS and email</string>
    <string name="add_email">Enter e-mail address</string>
    <string name="send_sms_application">Send SMS over built-in app</string>
    <string name="send_sms_sneaky">Send SMS untraceable</string>
    <string name="send_email">Send e-mail</string>

    <string name="ninth_class">Ninth Class</string>
    <string name="start_service">Start service</string>
    <string name="stop_service">Stop service</string>
    <string name="send_notification">Send notification</string>
    <string name="start_main">Start main activity</string>
    <string name="notification_view">This is notification view</string>
    <string name="start_counter">Start countdown</string>

    <string name="tenth_class">Tenth Class</string>

    <string name="test_no_back">Start no back</string>
    <string name="exit">Exit</string>
    <string name="enter_password">Enter Password</string>
    <string name="finger_signing">Finger signing</string>
    <string name="title_activity_maps">Map</string>

</resources>
