<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_seventh_testing_book_provider"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="hr.math.android.alltasks.seventh.SeventhTestingBookProvider">

    <EditText
        android:id="@+id/txtISBN"
        android:layout_height="wrap_content"
        android:layout_width="fill_parent"
        android:hint="@string/ISBN" />


    <EditText
        android:id="@+id/txtTitle"
        android:layout_height="wrap_content"
        android:layout_width="fill_parent"
        android:hint="@string/book_title" />

    <Button
        android:text="@string/add_book"
        android:id="@+id/btnAdd"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:onClick="onClickAddTitle" />

    <Button
        android:text="@string/get_books_all"
        android:id="@+id/btnRetrieve"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:onClick="onClickRetrieveTitles"  />

    <Button
        android:text="@string/get_books_from_bl"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:onClick="onClickRetrieveTitlesFromBL"  />

    <Button
        android:text="@string/delete_books_isbn"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:onClick="onClickDeleteBook"  />




</LinearLayout>
