<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ScrollView01"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/activity_fourth_class"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context="hr.math.android.alltasks.fourth.FourthClass">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="startLinearLayout"
            android:text="@string/start_linear_layout"
            android:id="@+id/button_fourth_class1" />

        <Button
            android:id="@+id/button_fourth_class2"
            android:text="@string/start_relative_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="startRelativeLayout"
            android:layout_below="@+id/button_fourth_class1"/>

        <Button
            android:id="@+id/button_fourth_class3"
            android:text="@string/start_frame_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="startFrameLayout"
            android:layout_below="@+id/button_fourth_class2"/>

        <Button
            android:id="@+id/button_fourth_class4"
            android:text="@string/start_table_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="startTableLayout"
            android:layout_below="@+id/button_fourth_class3"/>

        <Button
            android:id="@+id/button_fourth_class5"
            android:text="@string/start_anchoring"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="startAnchoring"
            android:layout_below="@+id/button_fourth_class4"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/view_elements"
            android:onClick="startViewElements"
            android:id="@+id/button_fourth_class6"
            android:layout_below="@+id/button_fourth_class5"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/progress_bar"
            android:onClick="startProgresBar"
            android:id="@+id/button_fourth_class7"
            android:layout_below="@+id/button_fourth_class6"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/list_view"
            android:onClick="startListView"
            android:id="@+id/button_fourth_class8"
            android:layout_below="@+id/button_fourth_class7"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/gallery"
            android:onClick="startGallery"
            android:id="@+id/button_fourth_class9"
            android:layout_below="@+id/button_fourth_class8"/>


    </RelativeLayout>
</ScrollView>