<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_third_class"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="hr.math.android.alltasks.ThirdClass">

    <Button
        android:id="@+id/button_third_class1"
        android:text="@string/google_search"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="onClickWebBrowser"/>

    <EditText
        android:id="@+id/third_edit_text1"
        android:hint="@string/add_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/button_third_class1"/>

    <Button
        android:id="@+id/button_third_class2"
        android:text="@string/make_call"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/button_third_class1"
        android:layout_toRightOf="@id/third_edit_text1"
        android:onClick="onClickMakeCall"/>

    <Button
        android:id="@+id/button_third_class3"
        android:text="@string/show_map"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/button_third_class2"
        android:onClick="onClickShowMap"/>

    <Button
        android:id="@+id/button_third_class4"
        android:text="@string/send_broadcast"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/button_third_class3"
        android:onClick="sendBroadcast"/>



</RelativeLayout>
