<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/activity_ninth_class"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:orientation="vertical"
        tools:context="hr.math.android.alltasks.ninth.NinthClass">

    <Button
            android:text="@string/start_service"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="startService"/>

    <Button
            android:text="@string/stop_service"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="stopService"/>

    <Button
            android:id="@+id/button_send_notification"
            android:text="@string/send_notification"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="sendNotification"/>

    <Button
            android:text="@string/start_counter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="startCountdownService"/>

</LinearLayout>
