<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_second_class"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="hr.math.android.alltasks.SecondClass">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="startWindowLikeDialog"
        android:text="@string/window_like_dialog"
        android:id="@+id/button_second_class1" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/send_text_hint"
        android:id="@+id/second_edit_text1"
        android:layout_below="@+id/button_second_class1"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:onClick="sendMessage"/>
    <Button
        android:id="@+id/button_second_class2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="sendMessage"
        android:layout_below="@+id/second_edit_text1"
        android:text="@string/send_input_text"/>

    <Button
        android:layout_below="@+id/button_second_class2"
        android:id="@+id/secondButton2"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/send_multiple_texts"
        android:onClick="sendMessageOnThreeWays"/>



</RelativeLayout>
