<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/activity_nineth_notification_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:orientation="vertical"
        tools:context="hr.math.android.alltasks.ninth.NotificationView">

    <TextView
            android:text="@string/notification_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    <Button
            android:id="@+id/button_restart_ninth"
            android:text="@string/ninth_class"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    <Button
            android:onClick="startMain"
            android:text="@string/start_main"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

</LinearLayout>
