<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_fifth_class"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="hr.math.android.alltasks.FifthClass">

    <Button
        android:id="@+id/button_fifth_class1"
        android:text="@string/shared_preferences"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="startSharedPreferences"/>

    <Button
        android:id="@+id/button_fifth_class2"
        android:text="@string/file_saving"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="startFileSaving"
        android:layout_below="@+id/button_fifth_class1"/>

    <Button
        android:id="@+id/button_fifth_class3"
        android:text="@string/read_file"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="startReadFile"
        android:layout_below="@+id/button_fifth_class2"/>

</RelativeLayout>
